# CMakeMACTest

./: .travis.yml  CMakeLists.txt  Info.plist  main.cpp
